# chocopy

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/chocopy/common/: errors.py  token.py
src/chocopy/parser/: node.py  parser.py
src/chocopy/scanner/: scanner.py
tests/chocopy/parser/: test_parser.py
tests/chocopy/scanner/: test_scanner.py
